EER correctly implemented

--- a/attempt_stft.ipynb
+++ b/attempt_stft.ipynb
@@ -24,6 +24,8 @@
     "from torch import nn\n",
     "import tqdm\n",
     "import torchvision\n",
+    "from sklearn.metrics import roc_curve\n",
+    "\n",
     "\n",
     "from torchvision.models import mobilenet_v3_small\n",
     "\n",
@@ -585,34 +587,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def calculate_fpr_tpr(predictions, labels, threshold=0.5):\n",
-    "    predicted_classes = (predictions >= threshold).float()\n",
-    "    TP = ((predicted_classes == 1) & (labels == 1)).sum().item()\n",
-    "    TN = ((predicted_classes == 0) & (labels == 0)).sum().item()\n",
-    "    FP = ((predicted_classes == 1) & (labels == 0)).sum().item()\n",
-    "    FN = ((predicted_classes == 0) & (labels == 1)).sum().item()\n",
-    "    TPR = TP / (TP + FN) if (TP + FN) != 0 else 0\n",
-    "    FPR = FP / (FP + TN) if (FP + TN) != 0 else 0\n",
-    "    return FPR, TPR\n",
-    "\n",
-    "def calculate_eer(predictions, labels):\n",
-    "    thresholds = np.linspace(0, 1, 100)\n",
-    "    fprs = []\n",
-    "    tprs = []\n",
-    "    \n",
-    "    for threshold in thresholds:\n",
-    "        fpr, tpr = calculate_fpr_tpr(predictions, labels, threshold)\n",
-    "        fprs.append(fpr)\n",
-    "        tprs.append(tpr)\n",
-    "    \n",
-    "    eer, eer_threshold = calculate_eer(fprs, tprs)\n",
-    "    return eer, thresholds[eer_threshold]\n",
-    "\n",
     "def train_model(model, epochs):\n",
     "    model = model.to(device)\n",
-    "    optimizer = torch.optim.Adam(params=model.parameters())\n",
+    "    optimizer = optim.Adam(params=model.parameters())\n",
     "    loss_fn = nn.BCEWithLogitsLoss()\n",
-    "    \n",
+    "\n",
     "    for i in tqdm.notebook.tqdm(range(epochs)):\n",
     "        train_preds = torch.tensor([], device=device)\n",
     "        val_preds = torch.tensor([], device=device)\n",
@@ -624,36 +603,37 @@
     "        \n",
     "        temp_train_loss = []\n",
     "        temp_val_loss = []\n",
+    "    \n",
+    "        net_train_loss = 0\n",
+    "        net_val_loss = 0\n",
     "        \n",
     "        with tqdm.notebook.tqdm(total=len(train_loader)) as pbar:\n",
     "            for x, y, _ in train_loader:\n",
     "                x = x.to(device)\n",
     "                y = y.to(device).type(torch.float32)\n",
-    "                \n",
+    "\n",
     "                logits = model(x)\n",
-    "                \n",
+    "        \n",
     "                optimizer.zero_grad()\n",
     "                loss = loss_fn(logits.squeeze(), y)\n",
+    "                \n",
+    "                preds = torch.sigmoid(logits).detach().squeeze()\n",
+    "                train_preds = torch.cat((train_preds, preds))\n",
+    "                train_actual = torch.cat((train_actual, y))\n",
     "                \n",
     "                temp_train_loss.append(loss.item())\n",
     "                \n",
     "                loss.backward()\n",
     "                optimizer.step()\n",
     "                \n",
-    "                train_preds = torch.cat((train_preds, logits.detach().squeeze()))\n",
-    "                train_actual = torch.cat((train_actual, y))\n",
-    "                \n",
     "                pbar.update(1)\n",
     "            pbar.close()\n",
     "        \n",
     "        net_train_loss = sum(temp_train_loss) / len(temp_train_loss)\n",
-    "        \n",
-    "        train_fpr, train_tpr = calculate_fpr_tpr(train_preds, train_actual)\n",
-    "        train_eer, _ = calculate_eer(train_preds, train_actual)\n",
-    "        \n",
+    "    \n",
     "        print(\"Testing:\")\n",
     "        model.eval()\n",
-    "        \n",
+    "    \n",
     "        with tqdm.notebook.tqdm(total=len(test_loader)) as pbar2:\n",
     "            for x, y, _ in test_loader:\n",
     "                x = x.to(device)\n",
@@ -663,21 +643,25 @@
     "                    logits = model(x)\n",
     "                    loss = loss_fn(logits.squeeze(), y.type(torch.float32))\n",
     "                    \n",
-    "                    temp_val_loss.append(loss.item())\n",
-    "                    \n",
-    "                    val_preds = torch.cat((val_preds, logits.squeeze()))\n",
+    "                    preds = torch.sigmoid(logits).detach().squeeze()\n",
+    "                    val_preds = torch.cat((val_preds, preds))\n",
     "                    val_actual = torch.cat((val_actual, y))\n",
     "                    \n",
+    "                    temp_val_loss.append(loss.item())\n",
+    "    \n",
     "                    pbar2.update(1)\n",
     "            pbar2.close()\n",
-    "        \n",
+    "    \n",
     "        net_val_loss = sum(temp_val_loss) / len(temp_val_loss)\n",
     "        \n",
-    "        val_fpr, val_tpr = calculate_fpr_tpr(val_preds, val_actual)\n",
-    "        val_eer, _ = calculate_eer(val_preds, val_actual)\n",
+    "        fpr, tpr, thresholds = roc_curve(val_actual.cpu().numpy(), val_preds.cpu().numpy())\n",
+    "        fnr = 1 - tpr\n",
+    "        eer_threshold = thresholds[np.nanargmin(np.absolute((fnr - fpr)))]\n",
+    "        eer = fpr[np.nanargmin(np.absolute((fnr - fpr)))]\n",
     "        \n",
-    "        print(f\"\\nEpoch {i+1}:\\n\\nTrain Loss: {net_train_loss}\\nTrain FPR: {train_fpr}\\nTrain TPR: {train_tpr}\\nTrain EER: {train_eer}\\n\\nVal Loss: {net_val_loss}\\nVal FPR: {val_fpr}\\nVal TPR: {val_tpr}\\nVal EER: {val_eer}\")\n",
-    "\n"
+    "        print(f\"\\nEpoch {i+1}:\\nTrain Loss: {net_train_loss}\\nVal Loss: {net_val_loss}\\nEER: {eer}\\nEER Threshold: {eer_threshold}\")\n",
+    "\n",
+    "# Note: Ensure `device`, `train_loader`, and `test_loader` are defined in your environment\n"
    ]
   },
   {
