--- a/stft.ipynb
+++ b/stft.ipynb
@@ -27,7 +27,7 @@
     "from sklearn.metrics import roc_curve\n",
     "\n",
     "\n",
-    "from torchvision.models import mobilenet_v3_small\n",
+    "from torchvision.models import resnet18\n",
     "\n",
     "device =  'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
