updating for singfake dataset

--- a/chroma_stft.ipynb
+++ b/chroma_stft.ipynb
@@ -51,49 +51,33 @@
     "    padded_x = np.tile(x, (num_repeats))\n",
     "    return pad_random(padded_x, max_len)\n",
     "\n",
-    "class SVDD2024(Dataset):\n",
+    "class Singfake(Dataset):\n",
     "    \"\"\"\n",
-    "    Dataset class for the SVDD 2024 dataset.\n",
+    "    Dataset class for the Singfake dataset.\n",
     "    \"\"\"\n",
     "    def __init__(self, base_dir, partition=\"train\", max_len=64000):\n",
-    "        assert partition in [\"train\", \"dev\", \"test\"], \"Invalid partition. Must be one of ['train', 'dev', 'test']\"\n",
+    "        assert partition in [\"train\", \"val\", \"test_t01\", \"test_t02\", \"test_t04\"], \"Invalid partition. Must be one of ['train', 'val', 'test_t01', 'test_t02', 'test_t04']\"\n",
     "        self.base_dir = base_dir\n",
     "        self.partition = partition\n",
-    "        self.base_dir = os.path.join(base_dir, partition + \"_set\")\n",
+    "        self.base_dir = os.path.join(base_dir, partition + \".csv\")\n",
     "        self.max_len = max_len\n",
     "\n",
     "        self.transforms = torchvision.transforms.Compose([torchvision.transforms.Resize((224,224))])\n",
-    "        \n",
-    "        try:\n",
-    "            with open(os.path.join(base_dir, f\"{partition}.txt\"), \"r\") as f:\n",
-    "                self.file_list = f.readlines()\n",
-    "        except FileNotFoundError:\n",
-    "            if partition == \"test\":\n",
-    "                self.file_list = []\n",
-    "                # get all *.flac files in the test_set directory\n",
-    "                for root, _, files in os.walk(self.base_dir):\n",
-    "                    for file in files:\n",
-    "                        if file.endswith(\".flac\"):\n",
-    "                            self.file_list.append(file)\n",
-    "            else:\n",
-    "                raise FileNotFoundError(f\"File {partition}.txt not found in {base_dir}\")\n",
+    "\n",
+    "        df=pd.read_csv(self.base_dir)\n",
+    "        self.file_paths=list(df[\"file_path\"])\n",
+    "        self.label=list(df[\"label\"])\n",
     "\n",
     "\n",
-    "            \n",
-    "    \n",
+    "\n",
     "    def __len__(self):\n",
-    "        return len(self.file_list)\n",
+    "        return len(self.file_paths)\n",
     "\n",
-    "    def __getitem__(self, index):            \n",
-    "        if self.partition == \"test\":\n",
-    "            file_name = self.file_list[index].strip()\n",
-    "            label = 0 # dummy label. Not used for test set.\n",
-    "        else:\n",
-    "            file = self.file_list[index]\n",
-    "            file_name = file.split(\" \")[2].strip()\n",
-    "            bonafide_or_spoof = file.split(\" \")[-1].strip()\n",
-    "            label = 1 if bonafide_or_spoof == \"bonafide\" else 0\n",
-    "        x, _ = librosa.load(os.path.join(self.base_dir, file_name + \".flac\"), sr=16000, mono=True)\n",
+    "    def __getitem__(self, index):\n",
+    "        file_path = self.file_paths[index]\n",
+    "        bonafide_or_spoof = self.label[index]\n",
+    "        label = 1 if bonafide_or_spoof == \"bonafide\" else 0\n",
+    "        x, _ = librosa.load(os.path.join(self.base_dir, file_path), sr=16000, mono=True)\n",
     "        x = pad_random(x, self.max_len) # x = pad_random (audio,64000)\n",
     "        x = librosa.util.normalize(x)\n",
     "        #x = librosa.feature.chroma_cqt(y=x,sr=16000)\n",
@@ -115,8 +99,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_ds=SVDD2024('./temp/ds/',partition='train')\n",
-    "test_ds=SVDD2024('./temp/ds/',partition='dev')"
+    "train_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='train')\n",
+    "val_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='val')\n",
+    "t01_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='test_t01')\n",
+    "t02_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='test_t02')\n",
+    "t04_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='test_t04')"
    ]
   },
   {
@@ -136,7 +123,7 @@
    ],
    "source": [
     "print(len(train_ds))\n",
-    "print(len(test_ds))"
+    "print(len(t01_ds))"
    ]
   },
   {
@@ -147,7 +134,7 @@
    "outputs": [],
    "source": [
     "train_loader=torch.utils.data.DataLoader(train_ds,batch_size=16)\n",
-    "test_loader=torch.utils.data.DataLoader(test_ds,batch_size=16)"
+    "test_loader=torch.utils.data.DataLoader(t01_ds,batch_size=16)"
    ]
   },
   {
@@ -623,7 +610,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
