--- a/zero_crossing_rate.ipynb
+++ b/zero_crossing_rate.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "id": "94de6d3a-e244-4fcd-b620-6ccc9a55be66",
    "metadata": {},
    "outputs": [],
@@ -51,74 +51,74 @@
     "    padded_x = np.tile(x, (num_repeats))\n",
     "    return pad_random(padded_x, max_len)\n",
     "\n",
-    "class SVDD2024(Dataset):\n",
+    "class Singfake(Dataset):\n",
     "    \"\"\"\n",
-    "    Dataset class for the SVDD 2024 dataset.\n",
+    "    Dataset class for the Singfake dataset.\n",
     "    \"\"\"\n",
     "    def __init__(self, base_dir, partition=\"train\", max_len=64000):\n",
-    "        assert partition in [\"train\", \"dev\", \"test\"], \"Invalid partition. Must be one of ['train', 'dev', 'test']\"\n",
+    "        assert partition in [\"train\", \"val\", \"test_t01\", \"test_t02\", \"test_t04\"], \"Invalid partition. Must be one of ['train', 'val', 'test_t01', 'test_t02', 'test_t04']\"\n",
     "        self.base_dir = base_dir\n",
     "        self.partition = partition\n",
-    "        self.base_dir = os.path.join(base_dir, partition + \"_set\")\n",
+    "        self.base_dir = os.path.join(base_dir, partition + \".csv\")\n",
     "        self.max_len = max_len\n",
     "\n",
     "        self.transforms = torchvision.transforms.Compose([torchvision.transforms.Resize((224,224))])\n",
-    "        \n",
-    "        try:\n",
-    "            with open(os.path.join(base_dir, f\"{partition}.txt\"), \"r\") as f:\n",
-    "                self.file_list = f.readlines()\n",
-    "        except FileNotFoundError:\n",
-    "            if partition == \"test\":\n",
-    "                self.file_list = []\n",
-    "                # get all *.flac files in the test_set directory\n",
-    "                for root, _, files in os.walk(self.base_dir):\n",
-    "                    for file in files:\n",
-    "                        if file.endswith(\".flac\"):\n",
-    "                            self.file_list.append(file)\n",
-    "            else:\n",
-    "                raise FileNotFoundError(f\"File {partition}.txt not found in {base_dir}\")\n",
+    "\n",
+    "        df=pd.read_csv(self.base_dir)\n",
+    "        self.file_paths=list(df[\"file_path\"])\n",
+    "        self.label=list(df[\"label\"])\n",
     "\n",
     "\n",
-    "            \n",
-    "    \n",
+    "\n",
     "    def __len__(self):\n",
-    "        return len(self.file_list)\n",
+    "        return len(self.file_paths)\n",
     "\n",
-    "    def __getitem__(self, index):            \n",
-    "        if self.partition == \"test\":\n",
-    "            file_name = self.file_list[index].strip()\n",
-    "            label = 0 # dummy label. Not used for test set.\n",
-    "        else:\n",
-    "            file = self.file_list[index]\n",
-    "            file_name = file.split(\" \")[2].strip()\n",
-    "            bonafide_or_spoof = file.split(\" \")[-1].strip()\n",
-    "            label = 1 if bonafide_or_spoof == \"bonafide\" else 0\n",
+    "    def __getitem__(self, index):\n",
+    "        file_path = self.file_paths[index]\n",
+    "        bonafide_or_spoof = self.label[index]\n",
+    "        label = 1 if bonafide_or_spoof == \"bonafide\" else 0\n",
     "        try:\n",
-    "            x, _ = librosa.load(os.path.join(self.base_dir, file_name + \".flac\"), sr=16000, mono=True)\n",
+    "            x, _ = librosa.load(os.path.join(self.base_dir, file_path), sr=16000, mono=True)\n",
     "            x = pad_random(x, self.max_len) # x = pad_random (audio,64000)\n",
     "            x = librosa.util.normalize(x)\n",
     "            x = librosa.feature.zero_crossing_rate(y=x,frame_length=320,hop_length=160)\n",
-    "            return torch.tensor(x).type(torch.float32), label, file_name\n",
+    "            return torch.tensor(x).type(torch.float32), label, file_path\n",
     "\n",
     "        except Exception as e:\n",
-    "            print(f\"Error loading {file_name}: {e}\")\n",
+    "            print(f\"Error loading {file_path}: {e}\")\n",
     "            return None"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "id": "39704d21-45a1-4b18-9ded-cae4335cc376",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m train_ds\u001b[38;5;241m=\u001b[39m\u001b[43mSingfake\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43m/content/drive/MyDrive/Singfake/Labeled_dataset\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43mpartition\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      2\u001b[0m val_ds\u001b[38;5;241m=\u001b[39mSingfake(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/drive/MyDrive/Singfake/Labeled_dataset\u001b[39m\u001b[38;5;124m'\u001b[39m,partition\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      3\u001b[0m t01_ds\u001b[38;5;241m=\u001b[39mSingfake(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m/content/drive/MyDrive/Singfake/Labeled_dataset\u001b[39m\u001b[38;5;124m'\u001b[39m,partition\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtest_t01\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[2], line 24\u001b[0m, in \u001b[0;36mSingfake.__init__\u001b[0;34m(self, base_dir, partition, max_len)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mmax_len \u001b[38;5;241m=\u001b[39m max_len\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mtransforms \u001b[38;5;241m=\u001b[39m torchvision\u001b[38;5;241m.\u001b[39mtransforms\u001b[38;5;241m.\u001b[39mCompose([torchvision\u001b[38;5;241m.\u001b[39mtransforms\u001b[38;5;241m.\u001b[39mResize((\u001b[38;5;241m224\u001b[39m,\u001b[38;5;241m224\u001b[39m))])\n\u001b[0;32m---> 24\u001b[0m df\u001b[38;5;241m=\u001b[39m\u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mbase_dir)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mfile_paths\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mfile_path\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m     26\u001b[0m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mlabel\u001b[38;5;241m=\u001b[39m\u001b[38;5;28mlist\u001b[39m(df[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "train_ds=SVDD2024('./temp/ds/',partition='train')\n",
-    "test_ds=SVDD2024('./temp/ds/',partition='dev')"
+    "train_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='train')\n",
+    "val_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='val')\n",
+    "t01_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='test_t01')\n",
+    "t02_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='test_t02')\n",
+    "t04_ds=Singfake('/content/drive/MyDrive/Singfake/Labeled_dataset',partition='test_t04')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "ed8ae012-ed68-4931-8a3c-7005740f9f39",
    "metadata": {},
    "outputs": [
@@ -133,23 +133,23 @@
    ],
    "source": [
     "print(len(train_ds))\n",
-    "print(len(test_ds))"
+    "print(len(t01_ds))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "477fa989-8958-424f-b514-b6806448ee98",
    "metadata": {},
    "outputs": [],
    "source": [
     "train_loader=torch.utils.data.DataLoader(train_ds,batch_size=16)\n",
-    "test_loader=torch.utils.data.DataLoader(test_ds,batch_size=16)"
+    "test_loader=torch.utils.data.DataLoader(t01_ds,batch_size=16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "2814fa3b-7045-46f2-a7a5-dec2ae158f12",
    "metadata": {},
    "outputs": [
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "fcd4cf6e-a596-4e10-bda9-54527a41475e",
    "metadata": {},
    "outputs": [],
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": null,
    "id": "d12490ca-fe3b-41cc-86e3-5f24cbbcc67d",
    "metadata": {
     "scrolled": true
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "id": "ff08c169-30b8-4bd6-a49d-87837db8ee18",
    "metadata": {},
    "outputs": [],
