--- a/chroma_stft.ipynb
+++ b/chroma_stft.ipynb
@@ -25,6 +25,7 @@
     "import tqdm\n",
     "import torchvision\n",
     "from sklearn.metrics import roc_curve\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "from torchvision.models import resnet34\n",
@@ -89,7 +90,7 @@
     "        x = librosa.amplitude_to_db(x,ref=np.max)\n",
     "        #print(x.shape)\n",
     "        #return self.transforms(torch.unsqueeze(torch.from_numpy(x),dim=0)), label, file_name\n",
-    "        return torch.unsqueeze(torch.tensor(x),dim=0).type(torch.float32), label, file_name\n"
+    "        return torch.unsqueeze(torch.tensor(x),dim=0).type(torch.float32), label, file_path\n"
    ]
   },
   {
