--- a/mfcc.ipynb
+++ b/mfcc.ipynb
@@ -24,6 +24,8 @@
     "from tqdm import tqdm\n",
     "import torchvision\n",
     "from sklearn.metrics import roc_curve\n",
+    "import pandas as pd\n",
+    "\n",
     "\n",
     "\n",
     "from torchvision.models import resnet34\n",
@@ -82,7 +84,7 @@
     "            \n",
     "            x = librosa.feature.mfcc(y=x, sr=16000, n_mfcc=44,hop_length=160,win_length=320)\n",
     "            \n",
-    "            return torch.unsqueeze(torch.tensor(x),dim=0), label, file_name\n",
+    "            return torch.unsqueeze(torch.tensor(x),dim=0), label, file_path\n",
     "            \n",
     "            #x = librosa.feature.chroma_cqt(y=x,sr=16000)\n",
     "            #x = np.abs(librosa.stft(x))\n",
@@ -91,7 +93,7 @@
     "            #return self.transforms(torch.unsqueeze(torch.from_numpy(x),dim=0)), label, file_name\n",
     "\n",
     "        except Exception as e:\n",
-    "            print(f\"Error loading {file_name}: {e}\")\n",
+    "            print(f\"Error loading {file_path}: {e}\")\n",
     "            return None"
    ]
   },
