--- a/chroma_cqt.ipynb
+++ b/chroma_cqt.ipynb
@@ -25,6 +25,8 @@
     "import tqdm\n",
     "import torchvision\n",
     "from sklearn.metrics import roc_curve\n",
+    "import pandas as pd\n",
+    "\n",
     "\n",
     "\n",
     "from torchvision.models import resnet34\n",
