--- a/rms.ipynb
+++ b/rms.ipynb
@@ -25,6 +25,7 @@
     "import tqdm\n",
     "import torchvision\n",
     "from sklearn.metrics import roc_curve\n",
+    "import pandas as pd\n",
     "\n",
     "\n",
     "from torchvision.models import resnet18\n",
@@ -442,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.-1"
   }
  },
  "nbformat": 4,
